--- a/playout/libretime_playout/liquidsoap/templates/entrypoint.liq.j2
+++ b/playout/libretime_playout/liquidsoap/templates/entrypoint.liq.j2
@@ -39,7 +39,11 @@ input_fade_transition = interactive.float("input_fade_transition", {{ preference
 
 %include "{{ paths.lib_filepath }}"
 
-{% include "/usr/lib/ladspa/processor_plugin.liq.j2" ignore missing %}
+{% if config.liquidsoap.hooks.before_outputs is defined %}
+{% for value in config.liquidsoap.hooks.before_outputs %}
+{% include value ignore missing %}
+{% endfor %}
+{% endif %}
 
 {% include "outputs.liq.j2" %}
 
